--- a/server/Dockerfile.build
+++ b/server/Dockerfile.build
@@ -19,10 +19,6 @@ RUN npm run lint
 RUN npm run unit
 RUN npm run build:prod
 
-# TODO remove this quick fix
-RUN echo 'AFTER BUILD: ls ./node_modules/koa-body-parsers' && \
-    ls ./node_modules/koa-body-parsers || echo 'no koa-body-parsers'
-
 # Production runtime container
 FROM node:8.11-alpine
 ARG BUILD_VERSION
@@ -37,13 +33,10 @@ COPY --from=builder /build .
 COPY --from=builder /server/package.json .
 COPY --from=builder /server/node_modules ./node_modules
 
-# TODO remove this quick fix
-RUN echo 'BEFORE PRUNE: ls ./node_modules/koa-body-parsers' && \
-    ls ./node_modules/koa-body-parsers || echo 'no koa-body-parsers'
-
-# TODO remove this quick fix
-RUN mv ./node_modules/koa-body-parsers ./koa-body-parsers || \
-    echo 'OK. No koa-body-parsers.'
+# TODO remove this koa-better-body/koa-body-parsers quick fix
+# RUN echo "Moving koa-body-parsers to a safe place before npm prune" && \
+#     mv ./node_modules/koa-body-parsers ./koa-body-parsers || \
+#     echo "OK. No koa-body-parsers."
 
 # Delete development libraries and create node user if it doesn't exist
 RUN npm prune --production && \
@@ -52,13 +45,16 @@ RUN npm prune --production && \
     addgroup node node || \
     su node -s /bin/sh -c "node --version"
 
-# TODO remove this quick fix
-RUN mv ./koa-body-parsers ./node_modules/koa-body-parsers || \
-    echo 'OK. No koa-body-parsers.'
+# TODO remove this koa-better-body/koa-body-parsers quick fix
+# RUN echo "Moving koa-body-parsers back to node_modules after npm prune" && \
+#     mv ./koa-body-parsers ./node_modules/koa-body-parsers || \
+#     echo "OK. No koa-body-parsers."
 
-# TODO remove this quick fix
+# TODO remove this koa-better-body/koa-body-parsers quick fix
 RUN echo 'AFTER PRUNE: ls ./node_modules/koa-body-parsers' && \
     ls ./node_modules/koa-body-parsers || echo 'no koa-body-parsers'
+RUN echo 'AFTER PRUNE: ls ./node_modules/raw-body' && \
+    ls ./node_modules/raw-body || echo 'no raw-body'
 
 USER node
 EXPOSE 3332
