--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -13,6 +13,7 @@ stack:
 
 logLevel: info    # trace, debug, info, warn, error, fatal
 debug: 'false'
+# TODO remove hardcoded taito-zone name
 repository: eu.gcr.io/gcloud-temp1/github-taitounited-server-template
 imagePullPolicy: ''
 
@@ -94,6 +95,7 @@ worker:
 
 database:
   port: 5432
+  # TODO remove hardcoded taito-zone / gcloud-zone / db name
   db: gcloud-temp1:europe-west1:common-postgres
   poolMin: 5
   poolMax: 10
