--- a/package.json
+++ b/package.json
@@ -38,6 +38,12 @@
     "test:client": "taito util-test:client:${taito_env}",
     "test:server": "taito util-test:server:${taito_env}",
     "test:worker": "echo DISABLED taito util-test:worker:${taito_env}",
+    "depcheck": "npm-run-all depcheck:admin depcheck:bot depcheck:client depcheck:server depcheck:worker ",
+    "depcheck:admin": "cd admin && echo --- ADMIN --- && npm-check || :",
+    "depcheck:bot": "cd bot && echo --- BOT --- && npm-check || :",
+    "depcheck:client": "cd client && echo --- CLIENT --- && npm-check || :",
+    "depcheck:server": "cd server && echo --- SERVER --- && npm-check || :",
+    "depcheck:worker": "cd worker && echo --- WORKER --- && npm-check || :",
     "analyze": "npm-run-all --parallel analyze:admin analyze:client",
     "analyze:admin": "if [ -d admin ]; cd admin && npm run analyze; fi",
     "analyze:client": "if [ -d client ]; cd client && npm run analyze; fi",
