--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,8 @@
     "redux": "^3.7.2",
     "redux-actions": "^2.4.0",
     "redux-saga": "^0.16.0",
-    "styled-components": "^3.3.0"
+    "styled-components": "^3.3.0",
+    "uglifyjs-webpack-plugin": "^1.2.5"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
