feat: check deps and check size commands

--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
     "test:client": "taito util-test:client:${taito_env}",
     "test:server": "taito util-test:server:${taito_env}",
     "test:worker": "echo DISABLED taito util-test:worker:${taito_env}",
-    "depcheck": "npm-run-all depcheck:admin depcheck:bot depcheck:client depcheck:server depcheck:worker ",
-    "depcheck:admin": "cd admin && echo --- ADMIN --- && npm-check || :",
-    "depcheck:bot": "cd bot && echo --- BOT --- && npm-check || :",
-    "depcheck:client": "cd client && echo --- CLIENT --- && npm-check || :",
-    "depcheck:server": "cd server && echo --- SERVER --- && npm-check || :",
-    "depcheck:worker": "cd worker && echo --- WORKER --- && npm-check || :",
-    "analyze": "npm-run-all --parallel analyze:admin analyze:client",
-    "analyze:admin": "if [ -d admin ]; cd admin && npm run analyze; fi",
-    "analyze:client": "if [ -d client ]; cd client && npm run analyze; fi",
+    "check-deps": "npm-run-all check-deps:admin check-deps:bot check-deps:client check-deps:server check-deps:worker ",
+    "check-deps:admin": "cd admin && echo --- ADMIN --- && npm-check || :",
+    "check-deps:bot": "cd bot && echo --- BOT --- && npm-check || :",
+    "check-deps:client": "cd client && echo --- CLIENT --- && npm-check || :",
+    "check-deps:server": "cd server && echo --- SERVER --- && npm-check || :",
+    "check-deps:worker": "cd worker && echo --- WORKER --- && npm-check || :",
+    "check-size": "npm-run-all --parallel check-size:admin check-size:client",
+    "check-size:admin": "cd admin && echo --- ADMIN --- && npm run analyze",
+    "check-size:client": "cd client && echo --- CLIENT --- && npm run analyze",
     "project-contacts": "cat PROJECT.md | sed -n -e '/^## Contacts.*$/,/^#.*$/{ /^## Contacts.*$/d; /^#.*$/d; p; }'",
     "docs": "echo TODO: generate docs in package.json",
     "scan": "echo 'Linting is executed in Dockerfiles during build' && echo 'TODO: execute code analysis here?'",
