chore: resourceNamespace minio parameter

--- a/scripts/helm/templates/deployment.yaml
+++ b/scripts/helm/templates/deployment.yaml
@@ -564,7 +564,7 @@ spec:
             - minio
             - gateway
             - gcs
-            - {{ .Values.zone.name }}
+            - {{ .Values.zone.resourceNamespace }}
           ports:
             - containerPort: {{ .Values.storage.port }}
           env:
