feat: check deps for root

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "test:client": "taito util-test:client:${taito_env}",
     "test:server": "taito util-test:server:${taito_env}",
     "test:worker": "echo DISABLED taito util-test:worker:${taito_env}",
-    "check-deps": "npm-run-all check-deps:admin check-deps:bot check-deps:client check-deps:server check-deps:worker ",
+    "check-deps": "npm-run-all check-deps:root check-deps:admin check-deps:bot check-deps:client check-deps:server check-deps:worker ",
+    "check-deps:root": "echo --- ROOT --- && npm-check || :",
     "check-deps:admin": "cd admin && echo --- ADMIN --- && npm-check || :",
     "check-deps:bot": "cd bot && echo --- BOT --- && npm-check || :",
     "check-deps:client": "cd client && echo --- CLIENT --- && npm-check || :",
