chore: taito_provider_region, taito_provider_zone

--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -106,7 +106,7 @@ storage:
   image: minio/minio
   replicas: 1
   host: storage
-  region: europe-west1-c
+  region: europe-west1
   secrets:
     MINIO_SECRET_KEY: storage.server-template.gateway
   env:
