chore(helm): Replaced hardcoded values with variables

--- a/scripts/helm-prod.yaml
+++ b/scripts/helm-prod.yaml
@@ -1,31 +1,1 @@
-# Override default settings for production env
-
-# TODO remove hardcoded taito-zone name
-repository: eu.gcr.io/gcloud-temp1/github-taitounited-server-template
-domains:
-  # TODO set production domain
-
-admin:
-  replicas: 2
-
-client:
-  replicas: 2
-
-server:
-  replicas: 2
-  env:
-    S3_BUCKET: server-template-prod
-
-worker:
-  replicas: 2
-  env:
-    S3_BUCKET: server-template-prod
-
-storage:
-  replicas: 2
-
-cache:
-  replicas: 1 # TODO multiple replicas as redis cluster
-
-queue:
-  replicas: 1 # TODO multiple replicas as queue cluster
+# NOTE: Here you can override default settings for production env
