--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -13,9 +13,11 @@ stack:
 
 logLevel: info    # trace, debug, info, warn, error, fatal
 debug: 'false'
-# TODO remove hardcoded taito-zone name
-repository: eu.gcr.io/gcloud-temp1/github-taitounited-server-template
+repository: ${taito_registry}
 imagePullPolicy: ''
+
+domains:
+  - ${taito_domain}
 
 # Stack settings
 
@@ -25,7 +27,7 @@ ingress:
   maxBodySize: 1m
 
 admin:
-  replicas: 1
+  replicas: ${kubectl_replicas}
   autoscale: false
   minReplicas: 2
   maxReplicas: 5
@@ -34,7 +36,7 @@ admin:
     SENTRY_PUBLIC_DSN: #sentryPublicDSN
 
 bot:
-  replicas: 1
+  replicas: ${kubectl_replicas}
   autoscale: false
   minReplicas: 1
   maxReplicas: 1
@@ -48,7 +50,7 @@ bot:
     ENV: production
 
 client:
-  replicas: 1
+  replicas: ${kubectl_replicas}
   autoscale: false
   minReplicas: 2
   maxReplicas: 5
@@ -57,7 +59,7 @@ client:
     SENTRY_PUBLIC_DSN: #sentryPublicDSN
 
 server:
-  replicas: 1
+  replicas: ${kubectl_replicas}
   autoscale: false
   minReplicas: 2
   maxReplicas: 5
@@ -73,12 +75,12 @@ server:
     # TODO remove ENV or set it automatically?
     ENV: production
     S3_URL: http://server-template-storage:9000/
-    S3_REGION: europe-west1
-    S3_BUCKET: server-template-dev
+    S3_REGION: ${taito_provider_region}
+    S3_BUCKET: server-template-${taito_env}
     S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
 
 worker:
-  replicas: 1
+  replicas: ${kubectl_replicas}
   autoscale: false
   minReplicas: 2
   maxReplicas: 5
@@ -90,23 +92,22 @@ worker:
     DEBUG: false
     ENV: production
     S3_URL: http://server-template-storage:9000/
-    S3_REGION: europe-west1
-    S3_BUCKET: server-template-dev
+    S3_REGION: ${taito_provider_region}
+    S3_BUCKET: server-template-${taito_env}
     S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
 
 database:
   port: 5432
-  # TODO remove hardcoded taito-zone / gcloud-zone / db name
-  db: gcloud-temp1:europe-west1:common-postgres
+  db: ${taito_zone}:${taito_provider_region}:${db_database_instance}
   poolMin: 5
   poolMax: 10
 
 # minio as storage gateway
 storage:
   image: minio/minio
-  replicas: 1
+  replicas: ${kubectl_replicas}
   host: storage
-  region: europe-west1
+  region: ${taito_provider_region}
   secrets:
     MINIO_SECRET_KEY: storage.server-template.gateway
   env:
@@ -114,11 +115,11 @@ storage:
 
 cache:
   image: redis:alpine
-  replicas: 1
+  replicas: 1 # TODO multiple replicas as redis cluster
 
 queue:
   image: rabbitmq:alpine
-  replicas: 1
+  replicas: 1 # TODO multiple replicas as queue cluster
 
 # TODO configure resources
 # resources: {}
