--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,222 +1,238 @@
-server-template-ingress:
-  container_name: server-template-ingress
-  image: nginx:1.13.8-alpine
-  restart: unless-stopped
-  ports:
-    - "8080:80"
-  links:
-    - server-template-admin:server-template-admin
-    - server-template-client:server-template-client
-    - server-template-server:server-template-server
-  volumes:
-    - "./docker-nginx.conf:/etc/nginx/nginx.conf"
-    - "./docker-nginx.htpasswd:/etc/nginx/.htpasswd"
+version: '3'
+services:
+  server-template-ingress:
+    container_name: server-template-ingress
+    image: nginx:1.13.8-alpine
+    restart: unless-stopped
+    networks:
+      - default
+    ports:
+      - "8080:80"
+    volumes:
+      - "./docker-nginx.conf:/etc/nginx/nginx.conf"
+      - "./docker-nginx.htpasswd:/etc/nginx/.htpasswd"
 
-# admin start
-server-template-admin:
-  container_name: server-template-admin
-  build: ./admin
-  dockerfile: ${dockerfile}
-  restart: unless-stopped
-  ports:
-    - "3334"
-  volumes:
-    - "./admin:/admin"
-    - "/admin/node_modules"
-    - "/admin/flow-typed/npm"
-  environment:
-    COMMON_ENV: local
-    NODE_ENV: development
-    API_ROOT: ''
-    API_URL: '/api'
-    # NOTE: Remember that environment variables given to webpack are used only
-    # during build. You should not put any environment specific variables here
-    # because the same build artifacts (static files) will be used in
-    # multiple environments (dev, test, stag, prod). Read environment
-    # specific settings from the API. You can usually derive api location from
-    # the browser url of the GUI.
-# admin end
+  # admin start
+  server-template-admin:
+    container_name: server-template-admin
+    build:
+      context: ./admin
+      dockerfile: ${dockerfile}
+    restart: unless-stopped
+    networks:
+      - default
+    ports:
+      - "3334"
+    volumes:
+      - "./admin:/admin"
+      - "/admin/node_modules"
+      - "/admin/flow-typed/npm"
+    environment:
+      COMMON_ENV: local
+      NODE_ENV: development
+      API_ROOT: ''
+      API_URL: '/api'
+      # NOTE: Remember that environment variables given to webpack are used only
+      # during build. You should not put any environment specific variables here
+      # because the same build artifacts (static files) will be used in
+      # multiple environments (dev, test, stag, prod). Read environment
+      # specific settings from the API. You can usually derive api location from
+      # the browser url of the GUI.
+  # admin end
 
-# client start
-server-template-client:
-  container_name: server-template-client
-  build: ./client
-  dockerfile: ${dockerfile}
-  restart: unless-stopped
-  ports:
-    - "3333"
-  volumes:
-    - "./client:/client"
-    - "/client/node_modules"
-    - "/client/flow-typed/npm"
-  environment:
-    COMMON_ENV: local
-    NODE_ENV: development
-    API_ROOT: ''
-    API_URL: '/api'
-    # NOTE: Remember that environment variables given to webpack are used only
-    # during build. You should not put any environment specific variables here
-    # because the same build artifacts (static files) will be used in
-    # multiple environments (dev, test, stag, prod). Read environment
-    # specific settings from the API. You can usually derive api location from
-    # the browser url of the GUI.
-# client end
+  # client start
+  server-template-client:
+    container_name: server-template-client
+    build:
+      context: ./client
+      dockerfile: ${dockerfile}
+    restart: unless-stopped
+    networks:
+      - default
+    ports:
+      - "3333"
+    volumes:
+      - "./client:/client"
+      - "/client/node_modules"
+      - "/client/flow-typed/npm"
+    environment:
+      COMMON_ENV: local
+      NODE_ENV: development
+      API_ROOT: ''
+      API_URL: '/api'
+      # NOTE: Remember that environment variables given to webpack are used only
+      # during build. You should not put any environment specific variables here
+      # because the same build artifacts (static files) will be used in
+      # multiple environments (dev, test, stag, prod). Read environment
+      # specific settings from the API. You can usually derive api location from
+      # the browser url of the GUI.
+  # client end
 
-# server start
-server-template-server:
-  container_name: server-template-server
-  build: ./server
-  dockerfile: ${dockerfile}
-  restart: unless-stopped
-  ports:
-    - "3332"
-  volumes:
-    - "./server:/server"
-    - "/server/node_modules"
-    - "/server/flow-typed/npm"
-  links: # server links
-    - server-template-cache:server-template-cache
-    - server-template-database:server-template-database
-    - server-template-storage:server-template-storage
-  environment:
-    COMMON_COMPANY: companyname
-    COMMON_PROJECT: server-template
-    COMMON_ENV: local
-    COMMON_DEBUG: 'false'
-    COMMON_LOG_FORMAT: text
-    COMMON_LOG_LEVEL: info      # trace, debug, info, warn, error, fatal
-    NODE_ENV: development # TODO remove?
-    ENV: dev # TODO remove?
-    DEBUG: 'false' # TODO remove?
-    API_BINDADDR: 0.0.0.0
-    API_PORT: 3332
-    JWT_SECRET: secret
-    ADMIN_PASSWORD: painipaini
-    USER_PASSWORD: painipaini
-    DATABASE_HOST: server-template-database
-    DATABASE_ID: server_template_local
-    DATABASE_DB: server_template_local
-    DATABASE_USER: server_template_local_app
-    DATABASE_SECRET: secret
-    DATABASE_POOL_MAX: '10'
-    S3_URL: http://server-template-storage:9000/
-    S3_REGION: milkyway
-    S3_BUCKET: bucket
-    S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
-    S3_KEY_SECRET: CVQVa33NekSiOJGnevSY5ITr8Rql8lFkp22WhLQ+
-# server end
+  # server start
+  server-template-server:
+    container_name: server-template-server
+    build:
+      context: ./server
+      dockerfile: ${dockerfile}
+    restart: unless-stopped
+    networks:
+      - default
+    ports:
+      - "3332"
+    volumes:
+      - "./server:/server"
+      - "/server/node_modules"
+      - "/server/flow-typed/npm"
+    environment:
+      COMMON_COMPANY: companyname
+      COMMON_PROJECT: server-template
+      COMMON_ENV: local
+      COMMON_DEBUG: 'false'
+      COMMON_LOG_FORMAT: text
+      COMMON_LOG_LEVEL: info      # trace, debug, info, warn, error, fatal
+      NODE_ENV: development # TODO remove?
+      ENV: dev # TODO remove?
+      DEBUG: 'false' # TODO remove?
+      API_BINDADDR: 0.0.0.0
+      API_PORT: 3332
+      JWT_SECRET: secret
+      ADMIN_PASSWORD: painipaini
+      USER_PASSWORD: painipaini
+      DATABASE_HOST: server-template-database
+      DATABASE_ID: server_template_local
+      DATABASE_DB: server_template_local
+      DATABASE_USER: server_template_local_app
+      DATABASE_SECRET: secret
+      DATABASE_POOL_MAX: '10'
+      S3_URL: http://server-template-storage:9000/
+      S3_REGION: milkyway
+      S3_BUCKET: bucket
+      S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
+      S3_KEY_SECRET: CVQVa33NekSiOJGnevSY5ITr8Rql8lFkp22WhLQ+
+  # server end
 
-# bot start
-# server-template-bot:
-#   container_name: server-template-bot
-#   build: ./bot
-#   dockerfile: ${dockerfile}
-#   restart: unless-stopped
-#   ports:
-#     - "3330"
-#   volumes:
-#     - "./bot:/bot"
-#     - "/bot/node_modules"
-#     - "/bot/flow-typed/npm"
-#   links:
-#     - server-template-server:server-template-server
-#   environment:
-#     COMMON_ENV: local
-#     COMMON_DEBUG: 'true'
-#     COMMON_PROJECT: server-template
-#     COMMON_COMPANY: companyname
-#     NODE_ENV: development
-#     ENV: dev # TODO remove?
-#     DEBUG: 'false'
-#     API_BINDADDR: 0.0.0.0
-#     API_PORT: 3332
-# bot end
+  # bot start
+  # server-template-bot:
+  #   container_name: server-template-bot
+  #   build:
+  #     context: ./bot
+  #     dockerfile: ${dockerfile}
+  #   restart: unless-stopped
+  #   networks:
+  #     - default
+  #   ports:
+  #     - "3330"
+  #   volumes:
+  #     - "./bot:/bot"
+  #     - "/bot/node_modules"
+  #     - "/bot/flow-typed/npm"
+  #   environment:
+  #     COMMON_ENV: local
+  #     COMMON_DEBUG: 'true'
+  #     COMMON_PROJECT: server-template
+  #     COMMON_COMPANY: companyname
+  #     NODE_ENV: development
+  #     ENV: dev # TODO remove?
+  #     DEBUG: 'false'
+  #     API_BINDADDR: 0.0.0.0
+  #     API_PORT: 3332
+  # bot end
 
-# worker start
-# server-template-worker:
-#   container_name: server-template-worker
-#   build: ./worker
-#   dockerfile: ${dockerfile}
-#   restart: unless-stopped
-#   ports:
-#     - "3331"
-#   volumes:
-#     - "./worker:/worker"
-#     - "/worker/node_modules"
-#     - "/worker/flow-typed/npm"
-#   links:
-#     - server-template-cache:server-template-cache
-#     - server-template-database:server-template-database
-#     - server-template-storage:server-template-storage
-#   environment:
-#     COMMON_ENV: local
-#     COMMON_DEBUG: 'true'
-#     COMMON_PROJECT: server-template
-#     COMMON_COMPANY: companyname
-#     NODE_ENV: development
-#     ENV: dev # TODO remove?
-#     DEBUG: 'false'
-#     API_BINDADDR: 0.0.0.0
-#     API_PORT: 3331
-#     DATABASE_HOST: server-template-database
-#     DATABASE_ID: server_template_local
-#     DATABASE_DB: server_template_local
-#     DATABASE_USER: server_template_local_app
-#     DATABASE_SECRET: secret
-#     DATABASE_POOL_MAX: '10'
-#     S3_URL: http://server-template-storage:9000/
-#     S3_REGION: milkyway
-#     S3_BUCKET: bucket
-#     S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
-#     S3_KEY_SECRET: CVQVa33NekSiOJGnevSY5ITr8Rql8lFkp22WhLQ+
-# worker end
+  # worker start
+  # server-template-worker:
+  #   container_name: server-template-worker
+  #   build:
+  #     context: ./worker
+  #     dockerfile: ${dockerfile}
+  #   restart: unless-stopped
+  #   networks:
+  #     - default
+  #   ports:
+  #     - "3331"
+  #   volumes:
+  #     - "./worker:/worker"
+  #     - "/worker/node_modules"
+  #     - "/worker/flow-typed/npm"
+  #   environment:
+  #     COMMON_ENV: local
+  #     COMMON_DEBUG: 'true'
+  #     COMMON_PROJECT: server-template
+  #     COMMON_COMPANY: companyname
+  #     NODE_ENV: development
+  #     ENV: dev # TODO remove?
+  #     DEBUG: 'false'
+  #     API_BINDADDR: 0.0.0.0
+  #     API_PORT: 3331
+  #     DATABASE_HOST: server-template-database
+  #     DATABASE_ID: server_template_local
+  #     DATABASE_DB: server_template_local
+  #     DATABASE_USER: server_template_local_app
+  #     DATABASE_SECRET: secret
+  #     DATABASE_POOL_MAX: '10'
+  #     S3_URL: http://server-template-storage:9000/
+  #     S3_REGION: milkyway
+  #     S3_BUCKET: bucket
+  #     S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
+  #     S3_KEY_SECRET: CVQVa33NekSiOJGnevSY5ITr8Rql8lFkp22WhLQ+
+  # worker end
 
-# cache start
-server-template-cache:
-  container_name: server-template-cache
-  image: redis:alpine
-  restart: unless-stopped
-  ports:
-    - "6379"
-# cache end
+  # cache start
+  server-template-cache:
+    container_name: server-template-cache
+    image: redis:alpine
+    restart: unless-stopped
+    networks:
+      - default
+    ports:
+      - "6379"
+  # cache end
 
-# queue start
-# server-template-queue:
-#   container_name: server-template-queue
-#   image: rabbitmq:alpine
-#   restart: unless-stopped
-#   ports:
-#     - "5672"
-# queue end
+  # queue start
+  # server-template-queue:
+  #   container_name: server-template-queue
+  #   image: rabbitmq:alpine
+  #   restart: unless-stopped
+  #   networks:
+  #     - default
+  #   ports:
+  #     - "5672"
+  # queue end
 
-# "EXTERNAL RESOURCES"
+  # "EXTERNAL RESOURCES"
 
-# database start
-server-template-database:
-  container_name: server-template-database
-  image: postgres:9.6
-  restart: unless-stopped
-  ports:
-    - "6000:5432"
-  environment:
-    POSTGRES_DB: server_template_local
-    POSTGRES_USER: server_template_local_app
-    POSTGRES_PASSWORD: secret
-  volumes:
-    - "./database:/docker-entrypoint-initdb.d"
-# database end
+  # database start
+  server-template-database:
+    container_name: server-template-database
+    image: postgres:9.6
+    restart: unless-stopped
+    networks:
+      - default
+    ports:
+      - "6000:5432"
+    environment:
+      POSTGRES_DB: server_template_local
+      POSTGRES_USER: server_template_local_app
+      POSTGRES_PASSWORD: secret
+    volumes:
+      - "./database:/docker-entrypoint-initdb.d"
+  # database end
 
-# storage start
-server-template-storage:
-  container_name: server-template-storage
-  image: minio/minio:latest
-  restart: unless-stopped
-  command: server /storage
-  environment:
-    MINIO_ACCESS_KEY: 070UEOQR6LX4YPZLFU0V
-    MINIO_SECRET_KEY: CVQVa33NekSiOJGnevSY5ITr8Rql8lFkp22WhLQ+
-  volumes:
-    - "./storage:/storage"
-# storage end
+  # storage start
+  server-template-storage:
+    container_name: server-template-storage
+    image: minio/minio:latest
+    restart: unless-stopped
+    command: server /storage
+    networks:
+      - default
+    environment:
+      MINIO_ACCESS_KEY: 070UEOQR6LX4YPZLFU0V
+      MINIO_SECRET_KEY: CVQVa33NekSiOJGnevSY5ITr8Rql8lFkp22WhLQ+
+    volumes:
+      - "./storage:/storage"
+  # storage end
+
+networks:
+  default:
 
 # EOF
