--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -5,9 +5,9 @@ ARG BUILD_VERSION
 RUN apk add --update-cache build-base python git
 # Required by the current flow version (can be removed later?)
 RUN apk --no-cache add ca-certificates wget && \
-  wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://raw.githubusercontent.com/sgerrand/alpine-pkg-glibc/master/sgerrand.rsa.pub && \
-  wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.27-r0/glibc-2.27-r0.apk && \
-  apk add glibc-2.27-r0.apk
+  wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub && \
+  wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.28-r0/glibc-2.28-r0.apk && \
+  apk add glibc-2.28-r0.apk
 WORKDIR /client
 COPY ./package.json ./package-lock.* ./.flowconfi* /client/
 ENV TARGET_ENV ${TARGET_ENV}
