chore: Small tuning

--- a/scripts/helm-prod.yaml
+++ b/scripts/helm-prod.yaml
@@ -1,1 +1,5 @@
 # NOTE: Here you can override default settings for production env
+
+# NOTE: Replace ${taito_domain} with the real production domain
+domains:
+  - ${taito_domain}
