chore: Added db proxy support for remote integration tests

--- a/package.json
+++ b/package.json
@@ -39,12 +39,13 @@
     "test:server": "taito util-test:server:${taito_env}",
     "test:worker": "echo DISABLED taito util-test:worker:${taito_env}",
     "check-deps": "npm-run-all check-deps:root check-deps:admin check-deps:bot check-deps:client check-deps:server check-deps:worker ",
-    "check-deps:root": "echo --- ROOT --- && npm-check || :",
-    "check-deps:admin": "cd admin && echo --- ADMIN --- && npm-check || :",
-    "check-deps:bot": "cd bot && echo --- BOT --- && npm-check || :",
-    "check-deps:client": "cd client && echo --- CLIENT --- && npm-check || :",
-    "check-deps:server": "cd server && echo --- SERVER --- && npm-check || :",
-    "check-deps:worker": "cd worker && echo --- WORKER --- && npm-check || :",
+    "check-deps:root": "echo --- ROOT --- && npm-check || : && npm run check-deps-note",
+    "check-deps:admin": "cd admin && echo --- ADMIN --- && npm-check || : && npm run check-deps-note",
+    "check-deps:bot": "cd bot && echo --- BOT --- && npm-check || : && npm run check-deps-note",
+    "check-deps:client": "cd client && echo --- CLIENT --- && npm-check || : && npm run check-deps-note",
+    "check-deps:server": "cd server && echo --- SERVER --- && npm-check || : && npm run check-deps-note",
+    "check-deps:worker": "cd worker && echo --- WORKER --- && npm-check || : && npm run check-deps-note",
+    "check-deps-note": "echo && echo 'NOTE: Many of the devDependencies and ~ references are actually in use even if reported unused. But all unused dependencies can usually be removed from package.json.' && echo",
     "check-size": "npm-run-all --parallel check-size:admin check-size:client",
     "check-size:admin": "cd admin && echo --- ADMIN --- && npm run analyze",
     "check-size:client": "cd client && echo --- CLIENT --- && npm run analyze",
