--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,8 @@
     "lodash": "^4.17.10",
     "pg-promise": "^7.4.0",
     "raven": "^2.6.2",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
