--- a/docker-compose-test.yaml
+++ b/docker-compose-test.yaml
@@ -23,7 +23,7 @@ services:
     container_name: server-template-database
     image: taitounited/taito-cli:latest
     restart: unless-stopped
-    entrypoint: /bin/sh -c "echo WORKING!!!!!!!!!!!!!!! && cd /project && taito db-proxy:${taito_env} 5432"
+    entrypoint: /bin/sh -c "cd /project && taito db-proxy:${taito_env} 5432"
     networks:
       - test
     ports:
@@ -34,6 +34,27 @@ services:
       # - "${HOME}/.ssh:/root/.ssh"
     environment:
       taito_docker: 'true'
+      template_default_taito_image: ${template_default_taito_image}
+      template_default_organization: ${template_default_organization}
+      template_default_domain: ${template_default_domain}
+      template_default_domain_prod: ${template_default_domain_prod}
+      template_default_zone: ${template_default_zone}
+      template_default_zone_prod: ${template_default_zone_prod}
+      template_default_provider: ${template_default_provider}
+      template_default_provider_org_id: ${template_default_provider_org_id}
+      template_default_provider_region: ${template_default_provider_region}
+      template_default_provider_zone: ${template_default_provider_zone}
+      template_default_provider_billing_account: ${template_default_provider_billing_account}
+      template_default_provider_org_id_prod: ${template_default_provider_org_id_prod}
+      template_default_provider_region_prod: ${template_default_provider_region_prod}
+      template_default_provider_zone_prod: ${template_default_provider_zone_prod}
+      template_default_provider_billing_account_prod: ${template_default_provider_billing_account_prod}
+      template_default_registry: ${template_default_registry}
+      template_default_source_git: ${template_default_source_git}
+      template_default_dest_git: ${template_default_dest_git}
+      template_default_kubernetes: ${template_default_kubernetes}
+      template_default_postgres: ${template_default_postgres}
+      template_default_mysql: ${template_default_mysql}
 
 networks:
   test:
