--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -510,11 +510,10 @@ steps:
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
     - template_default_postgres=${_TEMPLATE_DEFAULT_POSTGRES}
 
-# TODO util-test:server -> test
 - id: test
   waitFor: ['ci-wait']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['util-test:server:$BRANCH_NAME']
+  args: ['test:$BRANCH_NAME']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
