--- a/package.json
+++ b/package.json
@@ -52,65 +52,55 @@
     "project-contacts": "cat PROJECT.md | sed -n -e '/^## Contacts.*$/,/^#.*$/{ /^## Contacts.*$/d; /^#.*$/d; p; }'",
     "docs": "echo TODO: generate docs in package.json",
     "scan": "echo 'Linting is executed in Dockerfiles during build' && echo 'TODO: execute code analysis here?'",
-    "commitmsg": "echo 'NOTE: Running validate-commit-msg locally' && validate-commit-msg",
+    "commitmsg": "commitlint -E GIT_PARAMS",
     "precommit": "npm run precommit:branch && npm run precommit:lint",
     "precommit:branch": "if git-branch-is -q test || git-branch-is -q stag || git-branch-is -q master; then echo 'ERROR: You cannot commit changes directly to this environment branch. Only fast-forward merge is allowed.' && echo && exit 1; fi",
     "precommit:lint": "echo 'SKIP: Skipping linting on commit since we are already continuously linting during development.'",
     "prepush": "npm-run-all --parallel lint disabled-types unit",
     "types": "if [ -f .flowconfig ]; then flow; elif [ -f tsconfig.json ]; then echo TODO run typescript; fi",
     "disabled-types": "echo flow/typescript check disabled on prepush",
-    "release-pre:prod": "semantic-release pre",
-    "release-post:prod": "semantic-release post"
+    "release-pre:prod": "semantic-release --dry-run",
+    "release-post:prod": "semantic-release"
   },
-  "config": {
-    "validate-commit-msg": {
-      "types": [
-        "wip",
-        "feat",
-        "fix",
-        "docs",
-        "style",
-        "refactor",
-        "perf",
-        "test",
-        "build",
-        "ci",
-        "chore",
-        "revert"
-      ],
-      "scope": {
-        "required": false,
-        "allowed": [
-          "*"
-        ],
-        "validate": false,
-        "multiple": false
-      },
-      "warnOnFail": false,
-      "maxSubjectLength": 100,
-      "subjectPattern": ".+",
-      "subjectPatternErrorMsg": "subject does not match subject pattern!",
-      "helpMessage": "",
-      "autoFix": false
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ],
+    "rules": {
+      "type-enum": [
+        2,
+        "always",
+        [
+          "wip",
+          "feat",
+          "fix",
+          "docs",
+          "style",
+          "refactor",
+          "perf",
+          "test",
+          "revert",
+          "build",
+          "ci",
+          "chore"
+        ]
+      ]
     }
   },
   "release": {
-    "getLastRelease": "last-release-git",
-    "debug": false,
-    "verifyConditions": {
-      "path": "./node_modules/semantic-release/src/lib/plugin-noop.js"
-    }
+    "npmPublish": false,
+    "ci": false
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com:TaitoUnited/server-template.git"
+    "url": "git+https://github.com/TaitoUnited/server-template.git"
   },
   "devDependencies": {
+    "@commitlint/cli": "^7.1.2",
+    "@commitlint/config-conventional": "^7.1.2",
     "git-branch-is": "~2.0.0",
-    "husky": "^0.14.3",
-    "last-release-git": "0.0.3",
-    "npm-run-all": "^4.1.3",
-    "semantic-release": "^8.1.2",
-    "validate-commit-msg": "^2.14.0"
+    "husky": "~0.14.3",
+    "npm-run-all": "~4.1.3",
+    "semantic-release": "~15.9.14"
   }
 }
