--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
     }
   },
   "release": {
-    "npmPublish": false
+    "npmPublish": false,
+    "ci": false
   },
   "repository": {
     "type": "git",
