--- a/package.json
+++ b/package.json
@@ -89,7 +89,23 @@
   },
   "release": {
     "npmPublish": false,
-    "ci": false
+    "ci": true,
+    "analyzeCommits": {
+      "preset": "angular",
+      "releaseRules": [
+        {"type": "feat", "release": "minor"},
+        {"type": "fix", "release": "patch"},
+        {"type": "docs", "release": "patch"},
+        {"type": "style", "release": "patch"},
+        {"type": "refactor", "release": "patch"},
+        {"type": "perf", "release": "patch"},
+        {"type": "test", "release": "patch"},
+        {"type": "revert", "release": "patch"},
+        {"type": "build", "release": "patch"},
+        {"type": "ci", "release": "patch"},
+        {"type": "chore", "release": "patch"}
+      ]
+    }
   },
   "repository": {
     "type": "git",
