chore: ci false for semantic-release

--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
   },
   "release": {
     "npmPublish": false,
-    "ci": true,
+    "ci": false,
     "analyzeCommits": {
       "preset": "angular",
       "releaseRules": [
